tests/tables/fails/unexpected_tokens2.tbl
# error: unexpected_tokens2.tbl(4,11): Expected '=', got table
# table foo table = []
#           ^~~~~
table foo table = []
